--- a/css/flex/index.html
+++ b/css/flex/index.html
@@ -10,6 +10,7 @@
         <div class="flex-container">
             <div class="item-1">Item-1</div>
             <div class="item-2">Item-2</div>
+            <div class="item-3">Item-3</div>
             <!-- <div class="item-3">Item-3</div>
             <div class="item-4">Item-4</div> -->
             <!-- <div class="item-5">Item-5</div>
